# RaytracerV3

./: CMakeLists.txt  README.md
RaytracerV3/: Camera.cpp  Camera.h  LambertShader.cpp  LambertShader.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  PhotonMapper.cpp  PhotonMapper.h  Ray.h  RaytracerV3.1  RenderGL.cpp  RenderGL.h  Renderer.cpp  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  SurfaceShader.cpp  Window.cpp  Window.h  core.h  main.cpp  platform_includes.h
RaytracerV3.xcodeproj/: project.pbxproj
RaytracerV3/Core/: AreaLight.cpp  Camera.cpp  Camera.h  EmptyShader.cpp  EmptyShader.h  HitInfo.cpp  HitInfo.h  Octree.cpp  Octree.h  OctreeNode.cpp  OctreeNode.h  PhotonMap.cpp  PhotonMap.h  PhotonSource.cpp  PhotonSource.h  Ray.cpp  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
RaytracerV3/Core/Primitives/: Light.cpp  Mesh.cpp  Mesh.h  PointLight.h  Shape.cpp  Shape.h
RaytracerV3/Core/Shaders/: LambertShader.cpp  LambertShader.h  SpecularDielectricShader.cpp  SpecularMirrorShader.h  (+4 more)
RaytracerV3/Math/: BBH.cpp  BBH.h  Box.h  Color.cpp  Color.h  Core.h  Fwd.h  Line.h  LineAlgo.h  Mat44.h  MathGL.h  MathT.h  MeshBase.cpp  MeshBase.h  Obj.cpp  Obj.h  RGBE.cpp  RGBE.h  Rand.h  Vec2.h  Vec3.h  Vec4.h  Warp.cpp  Warp.h
RaytracerV3/OGL/: Core.h  FBO.cpp  FBO.h  GLFWMaster.cpp  GLFWMaster.h  GLUTMaster.cpp  GLUTMaster.h  GLUTWindow.cpp  GLUTWindow.h  GfxGLFWWindow.cpp  GfxGLFWWindow.h  GfxGLUTWindow.cpp  GfxGLUTWindow.h  Primitive.cpp  Primitive.h  Text.cpp  Text.h
RaytracerV3/Platform/: Fwd.h  Progress.cpp  Progress.h  Stopwatch.cpp  Stopwatch.h  Timestamp.cpp  Timestamp.h  Types.h  config.h
RaytracerV3/Util/: Array1D.h  Array2D.h  Array3D.h  Array4D.h  Fwd.h
data/cave/: source.txt
(+10 files in other folders)
